--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,13 @@ csv = "1.3"
 fnv = "1.0"
 medians = "3.0.12"
 hashbrown = "0.15.5"
+priority-queue = "2.5.0"
+orx-priority-queue = "1.7.0"
+
+[[bin]]
+name = "osm"
+path = "src/main.rs"
+
+[[bin]]
+name = "csv"
+path = "src/run_on_csv.rs"
