--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ medians = "3.0.12"
 hashbrown = "0.15.5"
 priority-queue = "2.5.0"
 orx-priority-queue = "1.7.0"
+ordered-float = "5.0.0"
 
 [[bin]]
 name = "osm"
